Add nav boxes htb

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -70,7 +70,7 @@ a:hover {
   margin: auto;
 }
 
-div:nth-child(3) {
+.flex_home div:nth-child(3) {
   padding-left: 0.8em;
 }
 
@@ -117,7 +117,7 @@ div:nth-child(3) {
   animation: slideDown 0.8s ease-out;
 }
 
-.roadmap nav {
+.roadmap nav, .htb nav {
   position: absolute;
   left: 0;
   padding-left: 1em;
@@ -205,18 +205,37 @@ div:nth-child(3) {
 
 /* htb */
 
-.htb {
+.htb main {
   display:flex;
   justify-content: center;
   width: 100%;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
-.htb div {
+.htb main > div > div {
+  border-bottom: 1px solid white;
+}
+
+.htb main > div > div p {
+  margin: 0.3em 0 0.3em 0.5em;
+  font-size: 1rem;
+  background: url('../images/cross.png') right/cover no-repeat;
+  background-size: 1.2em;
+  width: 97%;
+}
+
+.htb main > div {
   border: 1px solid white;
   width: 23em;
   height: 15em;
+  cursor: pointer;
 }
 
-.htb div:not(:last-child) {
-  margin-right: 5em;
+.htb main > div:hover {
+  transform: scale(1.05);
+}
+
+.htb main > div:not(:last-child) {
+  margin-right: 1em;
 }
