--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -205,7 +205,7 @@ a:hover {
 
 /* htb */
 
-.htb main {
+.htb main, .blogs main {
   display:flex;
   justify-content: space-around;
   align-items: center;
@@ -213,11 +213,11 @@ a:hover {
   flex-wrap: wrap;
 }
 
-.htb main > div > div {
+.htb main > div > div, .blogs main > div > div:not(.blog-mask) {
   border-bottom: 1px solid white;
 }
 
-.htb main > div > div p {
+.htb main > div > div p, .blogs main > div > div p {
   margin: 0.3em 0 0.3em 0.5em;
   font-size: 1rem;
   background: url('../images/cross.png') right/cover no-repeat;
@@ -225,7 +225,7 @@ a:hover {
   width: 97%;
 }
 
-.htb main > div {
+.htb main > div, .blogs main > div {
   border: 1px solid white;
   width: 23em;
   height: 15em;
@@ -233,7 +233,7 @@ a:hover {
   margin-bottom: 1em;
 }
 
-.htb main > div:hover {
+.htb main > div:hover, .blogs main > div:hover {
   transform: scale(1.05);
 }
 
@@ -258,4 +258,57 @@ footer {
 
 footer p {
   font-size: 0.8rem;
+}
+
+/* blogs */
+
+.blog-mask {
+  width: 100%;
+  height: 89%;
+  overflow: hidden;
+  position: relative;
+  border: none;
+}
+
+.blog-mask img {
+  display: block;
+  width: 100%;
+  scale: 1.15;
+  object-fit: cover;
+}
+
+.blogpost main {
+  width: 60%;
+  height: 100%;
+  margin-top: 10%;
+}
+
+.blogpost section {
+  margin-bottom: 2em;
+}
+
+.blogpost p {
+  font-size: 1rem;
+  margin-bottom: 0.5em;
+  line-height: 1.3;
+}
+
+.blogpost h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  color: #9EC8B9;
+}
+
+.blogpost h1 {
+  font-weight: bolder;
+}
+
+.blogpost img {
+  width: 70%;
+  margin: 2em auto;
+}
+
+.blogpost a {
+  margin-bottom: 0.5em;
 }
