--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -221,7 +221,7 @@ a:hover {
 
 /* htb */
 
-.htb main, .blogs main {
+.htb main, .blogs main, .useCases main {
   display:flex;
   justify-content: space-around;
   align-items: center;
@@ -280,7 +280,7 @@ footer p {
 
 /* blogs */
 
-.blog-mask {
+.blog-mask, .usecase-mask {
   width: 100%;
   height: 89%;
   overflow: hidden;
@@ -288,11 +288,25 @@ footer p {
   border: none;
 }
 
-.blog-mask img {
+.blog-mask img, .usecase-mask img {
   display: block;
   width: 100%;
   scale: 1.15;
   object-fit: cover;
+}
+
+.blogpost br {
+  margin-bottom: 1em;
+}
+
+.blogpost main ul li {
+  list-style: square; 
+  line-height: 1.3;
+  margin-left: 2.5em;
+}
+
+.blogpost main ul {
+  margin-bottom: 1em;
 }
 
 .blogpost main {
@@ -339,7 +353,7 @@ footer p {
 .blogpost #info {
   display:flex;
   justify-content: space-between;
-  width: 85%;
+  width: 100%;
   flex-wrap: wrap;
   margin-bottom: 1%;
 }
@@ -375,7 +389,7 @@ footer p {
   }
 
   nav {
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.8);
   }
 
   nav ul li {
